--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Coston Punks</title>
-    <meta name="description" content="Mint your Coston Punks NFT" />
+    <title>Sbg Pnks</title>
+    <meta name="description" content="Mint your Sbg Pnks NFT" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
