--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Flare Punks</title>
-    <meta name="description" content="Mint your Flare Punks NFT" />
+    <title>Grumpy  Punks</title>
+    <meta name="description" content="Mint your Grumpy  Punks NFT" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
